--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -8,7 +8,7 @@
 
 .title {
   align-self: flex-start;
-  margin: 50px 20px;
+  margin: 30px 20px;
   display: flex;
   gap: 5px;
   align-items: center;
@@ -34,4 +34,16 @@
 
 .user img {
   border-radius: 50%;
+}
+
+@media (max-width: 600px) {
+  .main {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+    font-size: 14px;
+  }
+  .user {
+    flex-direction: column;
+  }
 }
